@@ -4,6 +4,8 @@
     * set req.uri_hadler and req.uri_rule before calling pre handlers, but after
       end point handler is known
     * new get_options and log_error methods of Application object
+    * pre process handlers are run for http status handlers if not run yet
+    * not implement error got http status code
 
 ==== 1.4.2 ====
     * bug fix when setting req.clength
